# CoinMarketCapWatchlist

./: .gitignore  README.md  main.py  pyproject.toml
scrapers/: html_scraper.py  json_scraper.py  scrapers.py
