[tool.poetry]
name = "coinmarketcapwatchlist"
version = "0.1.0"
description = ""
authors = ["Ejik <seregaej@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiohttp = "^3.11.18"
lxml = "^5.4.0"
playwright = "^1.51.0"
httpx = "^0.28.1"
tenacity = "^9.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
